--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^3.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-feather": "^2.0.10",
     "react-toastify": "^11.0.2",
     "zod": "^3.24.1"
   },
