--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.62.10",
+    "@tanstack/react-query-devtools": "^5.62.10",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
     "next": "15.1.2",
     "next-auth": "^5.0.0-beta.25",
@@ -20,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-toastify": "^11.0.2",
+    "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
